# vulti

./: .gitignore  package.json
vulti-app/src-tauri/: Cargo.toml  tauri.conf.json
vulti-app/src-tauri/icons/: icon.icns
vulti-app/src-tauri/src/: lib.rs  main.rs
vulti-core/: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  batch_runner.py  cli-config.yaml.example  cli.py  connections.example.yaml  hermes_constants.py  hermes_state.py  hermes_time.py  mini_swe_runner.py  minisweagent_path.py  model_tools.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rl_cli.py  run_agent.py  setup-vulti.sh  toolsets.py  trajectory_compressor.py  utils.py  vulti  vulti_constants.py  vulti_state.py  vulti_time.py
vulti-core/.github/: PULL_REQUEST_TEMPLATE.md
vulti-core/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
vulti-core/.github/workflows/: deploy-site.yml
vulti-core/.plans/: openai-api-server.md  streaming-support.md
vulti-core/acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
vulti-core/acp_registry/: agent.json
vulti-core/agent/: anthropic_adapter.py  auxiliary_client.py  display.py  insights.py  model_metadata.py  prompt_builder.py  redact.py  skill_commands.py  smart_model_routing.py
vulti-core/cron/: __init__.py  jobs.py  scheduler.py
vulti-core/datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  web_research.yaml
vulti-core/docs/: acp-setup.md  honcho-integration-spec.html  honcho-integration-spec.md
vulti-core/docs/migration/: openclaw.md
vulti-core/docs/skins/: example-skin.yaml
vulti-core/environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  patches.py  tool_context.py  vulti_base_env.py  web_research_env.py
vulti-core/gateway/: __init__.py  agent_bus.py  channel_directory.py  config.py  continuwuity.py  delivery.py  hooks.py  matrix_agents.py  matrix_sync.py  migrate_sessions_to_matrix.py  mirror.py  pairing.py  run.py  session.py  status.py  sticker_cache.py  stream_consumer.py
vulti-core/honcho_integration/: cli.py  client.py  session.py
vulti-core/landingpage/: index.html  script.js  style.css
vulti-core/optional-skills/: DESCRIPTION.md
vulti-core/orchestrator/: README.md  __init__.py  agent_bus.py  agent_context.py  agent_factory.py  agent_registry.py  approvals.py  audit.py  budget.py  config_versioning.py  permissions.py  task_lock.py
vulti-core/rules/: rules.py
vulti-core/scripts/: discord-voice-doctor.py  install.cmd  install.ps1  install.sh  release.py  sample_and_compress.py  vulti-gateway
vulti-core/tests/: conftest.py  test_860_dedup.py  test_agent_loop.py  test_agent_loop_tool_calling.py  test_agent_loop_vllm.py  test_anthropic_error_handling.py  test_anthropic_oauth_flow.py  test_anthropic_provider_persistence.py  test_api_key_providers.py  test_auth_codex_provider.py  test_auth_nous_provider.py  test_auxiliary_config_bridge.py  test_cli_approval_ui.py  test_cli_init.py  test_cli_loading_indicator.py  test_cli_mcp_config_watch.py  test_cli_model_command.py  test_cli_new_session.py  test_cli_plan_command.py  test_cli_prefix_matching.py  test_cli_preloaded_skills.py  test_cli_provider_resolution.py  test_cli_secret_capture.py  test_cli_skin_integration.py  test_cli_status_bar.py  test_cli_tools_command.py  test_codex_execution_paths.py  test_codex_models.py  test_external_credential_detection.py  test_fallback_model.py  test_file_permissions.py  test_insights.py  test_managed_server_tool_support.py  test_model_provider_persistence.py  test_personality_none.py  test_plugins.py  test_provider_parity.py  test_quick_commands.py  test_reasoning_command.py  test_resume_display.py  (+9 more)
vulti-core/tools/: __init__.py  approval.py  browser_tool.py  checkpoint_manager.py  code_execution_tool.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  file_operations.py  file_tools.py  himalaya_config.py  honcho_tools.py  mcp_tool.py  memory_tool.py  modify_pane.py  openrouter_client.py  process_registry.py  read_channel_tool.py  registry.py  rl_training_tool.py  rule_tools.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  tirith_security.py  transcription_tools.py  tts_tool.py  vault_tool.py  voice_mode.py  wallet_tool.py
vulti-core/vulti_cli/: __init__.py  agent_registry.py  auth.py  banner.py  callbacks.py  checklist.py  claw.py  colors.py  commands.py  config.py  connection_registry.py  connections_cli.py  cron.py  curses_ui.py  default_soul.py  doctor.py  env_loader.py  gateway.py  main.py  models.py  pairing.py  plugins.py  rule.py  runtime_provider.py  setup.py  skills_config.py  skills_hub.py  skin_engine.py  status.py  tools_config.py  uninstall.py
vulti-core/website/: docusaurus.config.ts  sidebars.ts
vulti-hub/src-tauri/: Cargo.toml  tauri.conf.json
(+597 files in other folders)
