[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulti-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator for Vulti — lifecycle management, routing, rules, and inter-agent messaging on top of hermes-agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vulti AI" }]
license = { text = "MIT" }
dependencies = [
  # Hermes Agent — the upstream single-agent runtime (provides AIAgent,
  # tool registry, gateway, platform adapters, skills, memory, cron).
  # Track main branch to pick up fixes between releases.
  "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@main",
  # Vulti-specific deps not covered by hermes-agent
  "pyyaml",
  "python-dotenv",
]

[project.optional-dependencies]
modal = ["swe-rex[modal]>=1.4.0"]
daytona = ["daytona>=0.148.0"]
dev = ["pytest", "pytest-asyncio", "pytest-xdist", "mcp>=1.2.0"]
messaging = ["python-telegram-bot>=20.0", "discord.py[voice]>=2.0", "aiohttp>=3.9.0", "slack-bolt>=1.18.0", "slack-sdk>=3.27.0"]
cron = ["croniter"]
slack = ["slack-bolt>=1.18.0", "slack-sdk>=3.27.0"]
cli = ["simple-term-menu"]
tts-premium = ["elevenlabs"]
voice = ["sounddevice>=0.4.6", "numpy>=1.24.0"]
stt = ["faster-whisper>=1.0.0"]
pty = [
  "ptyprocess>=0.7.0; sys_platform != 'win32'",
  "pywinpty>=2.0.0; sys_platform == 'win32'",
]
honcho = ["honcho-ai>=2.0.1"]
mcp = ["mcp>=1.2.0"]
homeassistant = ["aiohttp>=3.9.0"]
acp = ["agent-client-protocol>=0.8.1,<1.0"]
rl = [
  "atroposlib @ git+https://github.com/NousResearch/atropos.git",
  "tinker @ git+https://github.com/thinking-machines-lab/tinker.git",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "wandb>=0.15.0",
]
yc-bench = ["yc-bench @ git+https://github.com/collinear-ai/yc-bench.git"]
all = [
  "vulti-orchestrator[modal]",
  "vulti-orchestrator[daytona]",
  "vulti-orchestrator[messaging]",
  "vulti-orchestrator[cron]",
  "vulti-orchestrator[cli]",
  "vulti-orchestrator[dev]",
  "vulti-orchestrator[tts-premium]",
  "vulti-orchestrator[slack]",
  "vulti-orchestrator[pty]",
  "vulti-orchestrator[honcho]",
  "vulti-orchestrator[mcp]",
  "vulti-orchestrator[homeassistant]",
  "vulti-orchestrator[acp]",
  "vulti-orchestrator[voice]",
  "vulti-orchestrator[stt]",
]

[project.scripts]
vulti = "vulti_cli.main:main"
vulti-agent = "run_agent:main"
vulti-acp = "acp_adapter.entry:main"

[tool.setuptools]
# Vulti-specific modules only. All hermes-agent modules (run_agent, model_tools,
# toolsets, agent/, tools/, gateway/, cron/, etc.) come from the hermes-agent
# dependency. The orchestrator injects multi-agent behavior via hooks and wrappers.
py-modules = ["vulti_constants", "vulti_state", "vulti_time", "hermes_constants", "hermes_state", "hermes_time"]

[tool.setuptools.packages.find]
# Vulti-only packages. hermes-agent provides: agent, tools, gateway, cron, honcho_integration
include = ["orchestrator", "orchestrator.*", "vulti_cli", "rules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
]
addopts = "-m 'not integration' -n auto"
