[package]
name = "hector-gateway"
version = "0.1.0"
description = "Hector Gateway - Personal AI Agent Hub"
authors = ["you"]
edition = "2021"

[lib]
name = "hector_gateway_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
