[package]
name = "vulti-hub"
version = "0.1.0"
description = "Vulti - Personal AI Agent Hub"
authors = ["you"]
edition = "2021"

[lib]
name = "vulti_hub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
shell-escape = "0.1"
tokio = { version = "1", features = ["process"] }
